Make changes for custom plugin

--- a/Jellyfin.Plugin.AniList/Configuration/configPage.html
+++ b/Jellyfin.Plugin.AniList/Configuration/configPage.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>AniList</title>
+    <title>AniList-Seiyuu</title>
 </head>
 <body>
         <div id="aniListConfigurationPage" data-role="page" class="page type-interior pluginConfigurationPage" data-require="emby-input,emby-button,emby-select,emby-checkbox">
@@ -87,7 +87,7 @@
 
             <script type="text/javascript">
                 var AniListConfigurationPage = {
-                    pluginUniqueId: "1bd22884-44be-40f3-ad95-fc4a7834ba2c",
+                    pluginUniqueId: "c0de98ad-a1a5-4d2f-9b6d-383742f4d910",
 
                     loadConfiguration: function () {
                         Dashboard.showLoadingMsg();
